RadioLogger: use non-deprecated newInstance